<resources>
    <string name="app_name">Botón de pánico</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="safety_contact">Safety contact</string>
    <string name="on_request_permissions_result_grant_results">The permission confirmations are empty</string>
    <string name="on_request_permissions_result_doesnt_find_permission">The permission confirmations doesn\'t find</string>
    <string name="on_request_permissions_result_denied_permissions">Permissions were not granted for the functionality of</string>
    <string name="photo_options_title">Select image</string>
    <string name="photo_options_gallery">Open the gallery</string>
    <string name="photo_options_delete">Delete image</string>
    <string name="photo_options_cancel">Cancel</string>
    <string name="photo_image_tag_default" translatable="false">Default Image</string>
    <string name="photo_image_tag_custom" translatable="false">Custom Image</string>
    <string name="photo_image_tag_object" translatable="false">Object Image</string>
    <string-array name="photo_options_empty">
        <item>@string/photo_options_gallery</item>
        <item>@string/photo_options_cancel</item>
    </string-array>
    <string-array name="photo_options_filled">
        <item>@string/photo_options_gallery</item>
        <item>@string/photo_options_delete</item>
        <item>@string/photo_options_cancel</item>
    </string-array>
    <string name="permission_message_alert_title">Request for alert permissions</string>
    <string name="permission_message_alert_message">To activate the alert, we need to be able to send SMS messages and access the location of the device. Go to the application settings and enable the permissions</string>
    <string name="permission_message_alert_positive_button">Settings</string>
    <string name="permission_message_alert_negative_button">Cancel</string>
    <string name="permission_message_alert_denied">Without permission you cannot activate the alert</string>
    <string name="permission_message_read_contacts_title">Request for contact permission</string>
    <string name="permission_message_read_contacts_message">To activate the import of a contact, we need to be able to access the contacts. Go to the application settings and enable the permission</string>
    <string name="permission_message_read_contacts_positive_button">Settings</string>
    <string name="permission_message_read_contacts_negative_button">Cancel</string>
    <string name="permission_message_read_contacts_denied">Without the permission you cannot export the contacts</string>
    <string name="sms_service_location_null">The location was requested but could not be sent properly</string>
    <string name="location_service_provider_null">Doesn\'t match with any location provider</string>
    <string name="location_service_permission_denied">The permission of location is disable</string>
    <string name="vibrator_service_doesnt_available">Vibrator doesn\'t available</string>
    <string name="keyboard_service_hide">Keyboard hides from</string>
    <string name="alert_service_active">Alert service active</string>
    <string name="alert_service_deactivate">Alert service deactivate</string>
    <string name="alert_service_notification_title">Alert Service</string>
    <string name="alert_service_notification_content">Shake your phone horizontally</string>
    <string name="home_gps_request">To get the location when the alert is activated it is necessary to have the GPS active, without it only the help message can be sent</string>
    <string name="home_contacts_highlighted_empty">At least one highlighted contact is required to send the alert</string>
    <string name="home_quick_alert_button_active">Cancel</string>
    <string name="home_quick_alert_button_deactivate">Alert</string>
    <string name="home_quick_alert_content_active">Do you want to cancel the alert?</string>
    <string name="home_quick_alert_content_deactivate">Do you feel in danger? Press the button</string>
    <string name="alert">Alert</string>
    <string name="alert_empty">Some error happen with the alert</string>
    <string name="alert_message_default">I feel in danger, please search for me.</string>
    <string name="alert_empty_list">No alert has been made yet</string>
    <string name="alert_empty_list_img_decorator">Decoration image when the list is empty</string>
    <string name="alert_detail">Alert details</string>
    <string name="alert_detail_img_location">Location image</string>
    <string name="alert_detail_img_date">Date image</string>
    <string name="alert_detail_img_type">Type image</string>
    <string name="alert_detail_location_not_available">Location not available</string>
    <string name="alert_detail_recycler_title">sent messages</string>
    <string name="alert_detail_alert_contact_empty_list">All contacts associated with this alert have been deleted</string>
    <string name="alert_detail_alert_Contact_empty_list_img_decorator">Decoration image when the list is empty</string>
    <string name="alert_delete_title">Delete confirmation</string>
    <string name="alert_delete_message">Are you sure you want to remove the alert? It will delete the record of who you sent it and the message.</string>
    <string name="alert_delete_positive">Delete</string>
    <string name="alert_delete_negative">Cancel</string>
    <string name="alert_deleted_successfully">The alert has been deleted</string>
    <string name="contact">Contacts</string>
    <string name="contact_empty">Some error happen with the contact</string>
    <string-array name="contact_relationship_list">
        <item>Couple</item>
        <item>Family</item>
        <item>Friend</item>
        <item>Well-known</item>
    </string-array>
    <string name="contact_name">Name</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_relationship">Relationship</string>
    <string name="contact_message">Alert message</string>
    <string name="contact_message_helper">If you leave the input field empty, the default alert message will be applied</string>
    <string name="contact_is_highlighted">Will this contact be sent the alert message?</string>
    <string name="contact_name_empty_error">You need to put the name</string>
    <string name="contact_phone_empty_error">You need to put the phone</string>
    <string name="contact_phone_invalid_error">Invalid phone</string>
    <string name="contact_phone_already_exist_error">The phone already exists, please enter another</string>
    <string name="contact_relationship_empty_error">It is necessary to choose one of the options</string>
    <string name="contact_empty_error_default">It is necessary fill the field</string>
    <string name="contact_empty_list">Add your contacts to send them alerts</string>
    <string name="contact_empty_list_img_decorator">Decoration image when the list is empty</string>
    <string name="contact_limit_highlighted">Exceeded the limit of contacts to send the message, disable one to activate another</string>
    <string name="contact_add">Add contact</string>
    <string name="contact_add_import">Import contact</string>
    <string name="contact_add_positive">Save</string>
    <string name="contact_add_negative">Cancel</string>
    <string name="contact_added_successfully">Contact was successfully added</string>
    <string name="contact_detail">Contact details</string>
    <string name="contact_detail_edit">Edit contact</string>
    <string name="contact_detail_delete">Delete contact</string>
    <string name="contact_default_message">Default message</string>
    <string name="contact_highlighted_true">Alert contact</string>
    <string name="contact_highlighted_false">Backup contact</string>
    <string name="contact_detail_img_image">Profile image</string>
    <string name="contact_detail_img_phone">Phone field</string>
    <string name="contact_detail_img_relationship">Relationship field</string>
    <string name="contact_detail_img_message">Message field</string>
    <string name="contact_detail_img_highlighted">Check active contact field</string>
    <string name="contact_edit">Edit contact</string>
    <string name="contact_edit_positive">Edit</string>
    <string name="contact_edit_negative">Cancel</string>
    <string name="contact_edit_image_cannot_be_updated">The image cannot be updated</string>
    <string name="contact_edit_successfully">Contact was successfully edited</string>
    <string name="contact_delete_title">Delete confirmation</string>
    <string name="contact_delete_message">will be eliminated with his alerts, are you sure?</string>
    <string name="contact_delete_positive">Delete</string>
    <string name="contact_delete_negative">Cancel</string>
    <string name="contact_deleted_successfully">has been eliminated</string>
    <string name="settings">Settings</string>
    <string name="settings_category_alert">Alert</string>
    <string name="settings_category_alert_sensitivity">Sensor sensitivity</string>
    <string name="settings_category_alert_sensitivity_image">Sensor sensitivity image</string>
    <string-array name="settings_category_alert_sensitivity_list">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="settings_category_alert_location">Location</string>
    <string name="settings_category_alert_location_summary">Allow to send the location in a message</string>
    <string name="settings_category_alert_location_image">Location image</string>
    <string name="settings_category_alert_map">Map</string>
    <string name="settings_category_alert_map_image">Map image</string>
    <string-array name="settings_category_alert_map_list" translatable="false">
        <item>Open Street Map</item>
        <item>Google Maps</item>
    </string-array>
    <string name="settings_category_alert_vibration">Vibration</string>
    <string name="settings_category_alert_vibration_summary">Allow vibration when alert is triggered</string>
    <string name="settings_category_alert_vibration_image">Vibration image</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_general_default_message">Default message</string>
    <string name="settings_category_general_default_message_image">Default message image</string>
    <string name="settings_category_general_default_message_positive_button">Save</string>
    <string name="settings_category_general_default_message_negative_button">Cancel</string>
    <string name="settings_category_general_default_message_text">Default message, can\'t be left empty</string>
    <string name="settings_category_general_default_message_text_successfully">It was successfully updated</string>
    <string name="settings_category_general_default_message_text_declining">Couldn\'t be updated</string>
    <string name="settings_category_general_clean">Clean data</string>
    <string name="settings_category_general_clean_summary">Remove the entire information from the application</string>
    <string name="settings_category_general_clean_image">Clean data image</string>
    <string name="settings_category_about">About</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_category_about_privacy_policy">Privacy policy</string>
    <string name="settings_category_about_privacy_policy_image">Privacy policy image</string>
    <string name="settings_info_description_title">Description</string>
    <string name="settings_info_description_content">The project objectives are to provide people with tools that allow them not only to report their situation in order to find help, but also to prevent acts of violence. </string>
    <string name="settings_info_version_title">Version</string>
</resources>